tidy up display

--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -173,9 +173,9 @@
                  barnesHut: { gravitationalConstant: -8000, springConstant: 0.04, springLength: 150 }
             },
              groups: { // Define groups for styling
-                 Person: { color:{background:'lightblue', border:'blue'}, shape: 'icon', icon: { face: 'FontAwesome', code: '\uf007', size: 50, color: 'blue'} },
-                 Organization: { color:{background:'lightgreen', border:'green'}, shape: 'icon', icon: { face: 'FontAwesome', code: '\uf1ad', size: 50, color: 'green'} },
-                 Project: { color:{background:'lightcoral', border:'red'}, shape: 'icon', icon: { face: 'FontAwesome', code: '\uf0b1', size: 50, color: 'red'} },
+                 "ex:Person": { color:{background:'lightblue', border:'blue'}, shape: 'icon', icon: { face: 'FontAwesome', code: '\uf007', size: 50, color: 'blue'} },
+                 "ex:Company": { color:{background:'lightgreen', border:'green'}, shape: 'icon', icon: { face: 'FontAwesome', code: '\uf1ad', size: 50, color: 'green'} },
+                 "ex:Project": { color:{background:'lightcoral', border:'red'}, shape: 'icon', icon: { face: 'FontAwesome', code: '\uf0b1', size: 50, color: 'red'} },
                  // Style for the Transcription nodes when visible
                  [PROVENANCE_NODE_GROUP]: { // Use the constant here
                     color: { background: '#f0e68c', border: '#adad85'}, // Khaki color
